force-app/main/default/objects/Metadata_Component_Version__c/Metadata_Component_Version__c.object-meta.xml
<CustomObject>
    <description>Stores one metadata component state inside a snapshot.</description>
    <label>Metadata Component Version</label>
    <nameField>
        <displayFormat>MCV-{00000}</displayFormat>
        <label>Metadata Component Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Component Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>