force-app/main/default/objects/Metadata_Component_Version__c/fields/Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_Name__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>