force-app/main/default/objects/Metadata_Component_Version__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <label>Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>