force-app/main/default/objects/Metadata_Component_Version__c/fields/Definition_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Definition_Snippet__c</fullName>
    <label>Definition Snippet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>