force-app/main/default/objects/Metadata_Component_Version__c/fields/Snapshot_Key__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Key__c</fullName>
    <label>Snapshot Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>