force-app/main/default/objects/Metadata_Component_Version__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>