force-app/main/default/objects/Metadata_Component_Version__c/fields/Version_Key__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>Version_Key__c</fullName>
    <label>Version Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>